# ICP_NFTs

./: README.md
ICP_Assets/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP_Assets/src/ICP_Assets_backend/: Cargo.toml
ICP_Assets/src/ICP_Assets_backend/src/: lib.rs
ICP_Assets/src/ICP_Assets_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ICP_Assets/src/ICP_Assets_frontend/src/: App.jsx
ICP_NFTs/: Cargo.toml  README.md  dfx.json  key.yml  package-lock.json  package.json
ICP_NFTs/src/ICP_NFTs_backend/: Cargo.toml  ICP_NFTs_backend.did
ICP_NFTs/src/ICP_NFTs_backend/src/: generate-candid.rs  https.rs  https_api.rs  https_chat.rs  lib.rs  nft.rs
ICP_NFTs/src/ICP_NFTs_frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
ICP_NFTs/src/ICP_NFTs_frontend/src/: App.jsx  AppContext.jsx  Collections.jsx  NFT_Minter.jsx  chat.jsx  create_nft.jsx  index.html  main.jsx
ICP_NFTs/src/ICP_NFTs_frontend/src/styles/: Collections.css  CreateNFT.css  NFT_Minter.css  chat.css  create_nfts.css
