[package]
name = "ICP_Assets_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk = "0.15"
candid = "0.10.9"
serde = "1.0.204"

