[package]
name = "ICP_NFTs_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.1"
ic-cdk = "0.15"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.6"
candid_derive = "0.6.6"